# PCL_Notes

./: README.md
pcl_filter/: .goutputstream-EY7U0Z  CMakeLists.txt  README.md  package.xml
pcl_filter/include/: pcl_filter_core.h
pcl_filter/launch/: filter.launch
pcl_filter/src/: pcl_filter_core.cpp  pcl_filter_node.cpp
pcl_ground__plane_fitting/: CMakeLists.txt  README.md  package.xml
pcl_ground__plane_fitting/include/: plane_fitting_core.h
pcl_ground__plane_fitting/launch/: plane_fitting.launch
pcl_ground__plane_fitting/src/: plane_fitting_core.cpp  plane_fitting_node.cpp
pcl_ground_clip/: CMakeLists.txt  README.md  package.xml
pcl_ground_clip/include/: pcl_ground_core.h
pcl_ground_clip/launch/: ground_clip.launch
pcl_ground_clip/src/: pcl_ground_core.cpp  pcl_ground_node.cpp
pcl_ground_clip2/: CMakeLists.txt  README.md  package.xml
pcl_ground_clip2/include/: pcl_clip_core.h
pcl_ground_clip2/launch/: clip.launch
pcl_ground_clip2/src/: pcl_clip_core.cpp  pcl_clip_node.cpp
pcl_icp/: CMakeLists.txt  README.md  icp1.cpp  icp2.cpp  pairwise.cpp
pcl_icp1/: CMakeLists.txt  icp2.cpp  icp3.cpp  main.cpp  pairwise.cpp
pcl_ndt/: CMakeLists.txt  README.md  pcl_ndt1.cpp
pcl_test/: CMakeLists.txt  README.md  main.cpp
pcl_ws/: .ycm_extra_conf.py  README.md
pcl_ws/devel/: .catkin  .rosinstall  setup.sh
pcl_ws/devel/lib/pkgconfig/: pcl_test.pc
pcl_ws/devel/share/pcl_ros_test/cmake/: pcl_ros_testConfig.cmake
pcl_ws/devel/share/pcl_test/cmake/: pcl_testConfig.cmake
pcl_ws/src/pcl_test/: CMakeLists.txt
pcl_ws/src/pcl_test/include/: pcl_test_core.h
pcl_ws/src/pcl_test/launch/: pcl_test.launch
pcl_ws/src/pcl_test/src/: pcl_test_core.cpp  pcl_test_node.cpp
